Added  "Achievement " description

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="about_text">Hey there, <br> I am Joshim and this is <br> my portfolio.</div>
                     <div class="education_text">Hey, <br> This is Joshim and <br> I am studying at diploma computer science.</div>
                     <div class="experience_text">Hey Devs, <br> This is Joshim and I have more than 2years of web design.</nr></div>
-                    <div class="achievement_text">This is test Achievement TEXT</div>
+                    <div class="achievement_text">Hey, How are you? <br> This this Joshim. I have gain multiple awards for my country. </div>
                     <div class="level_text">Hey there, <br>
                     here's my all social connections.</div>
                 </div>
@@ -158,7 +158,48 @@
                       </div>
                   </div>
               </div>
+          </div>
 
+          <div class="achive_bio">
+              <div class="achive_bio_text">
+                Hey there,
+                Here's my all achievement in my life. Now I am sharing to you. Here's a little table of my achievement. I hope this is the best way to show you my all 
+                prizes.<br>
+                -Thanks
+              </div>
+              
+              <div class="achive_table">
+                  <table class="achive_tabile_data">
+                      <tr>
+                          <th>Name of achievement</th>
+                          <th>Prize year</th>
+                          <th>location</th>
+                      </tr>
+                      <tr>
+                          <td>Diploma Certificate</td>
+                          <td>2020</td>
+                          <td>Bangladesh</td>
+                      </tr>
+
+                      <tr>
+                        <td>Fivrr Award </td>
+                        <td>2020</td>
+                        <td>Bangladesh</td>
+                    </tr>
+
+                    <tr>
+                        <td>Freelancing Award</td>
+                        <td>2021</td>
+                        <td>Bangladesh</td>
+                    </tr>
+
+                    <tr>
+                        <td>Best Remittance Award</td>
+                        <td>2021</td>
+                        <td>Bangladesh</td>
+                    </tr>
+                  </table>
+              </div>
           </div>
        </div>
     </div>
