Fixed "Achievement" and "Social" info text.

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <div class="social_text_wraper">
                     Hey what's up? <br>
                     This is Joshim. I made this profile app! I have more projects in my hand. I have done about 100 client's job. 
-                    They are all came from deffirent type of freelancing market place. I am happy to work them and they are happy too about my hjob. They haired me 
+                    They are all came from deffirent type of freelancing market place. They haired me 
                     a lot of times. So, here's my all social account , if you need you can contact me. I will resoponse you as soon as possible.<br>
                     -Thanks.   
                 </div>
@@ -231,6 +231,14 @@
        </div>
     </div>
 
+<!--     
+    <script>
+        $(document).ready(function() {
+            $("body").on("contextmenu", function(e) {
+                return false;
+              });
+          });
+      </script> -->
     <script src="app.js"></script>
     <script src="https://kit.fontawesome.com/ebc60cbf2d.js" crossorigin="anonymous"></script>
 </body>
